--- a/css/style.css
+++ b/css/style.css
@@ -96,13 +96,13 @@ label {
 .thanks_modal_text,
 .callback_form {
   width: 320px;
-  margin: 250px auto;
+  margin: 15% auto;
   background-color: #fff;
   text-align: center;
   padding-top: 42px;
 }
 .thanks_modal_text {
-  margin-top: 300px;
+  margin-top: 15%;
 }
 .close_btn_request,
 .close_btn_thanks,
