--- a/css/style.css
+++ b/css/style.css
@@ -90,19 +90,17 @@ label {
   z-index: 100;
 }
 .modal_showed {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .quick_request_form,
 .thanks_modal_text,
 .callback_form {
   width: 320px;
-  margin: 300px auto;
   background-color: #fff;
   text-align: center;
   padding-top: 42px;
-}
-.thanks_modal_text {
-  margin-top: 300px;
 }
 .close_btn_request,
 .close_btn_thanks,
@@ -754,8 +752,4 @@ header {
   .contacts_phone {
     margin: 8px 0;
   }
-}
-@media (max-height: 500px){
-.quick_request_form, .thanks_modal_text, .thanks_modal_text, .callback_form {
-  margin-top: 100px;  
 }
